删除错误的包